<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fdfdfd"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="28dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fdfdfd"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:checked="true"
                    android:text="@string/viewxml" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:text="@string/viewsession" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_purple"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/button_6" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>