<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LayoutHorizontalActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rojo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@android:color/darker_gray"
            android:text="@string/color_rojo" />

        <Button
            android:id="@+id/verde"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@android:color/darker_gray"
            android:text="@string/color_verde" />

        <Button
            android:id="@+id/amarillo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@android:color/darker_gray"
            android:text="@string/color_amarillo" />

        <Button
            android:id="@+id/azul"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/color_azul" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>