<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayoutActivity">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
       >

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/uno"
            android:background="@android:color/holo_red_dark"

            tools:text="1"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"

            android:layout_height="20dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/cero" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/dos"
            android:background="@android:color/holo_green_light"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>